<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="nombrePref"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/nombreUsuarioPref"
        android:selectable="false"
        android:icon="@drawable/ic_perfil"/>
    <ListPreference
        android:defaultValue="true"
        android:entries="@array/idiomas_str"
        android:entryValues="@array/idiomas_value"
        android:key="idiomaPref"
        android:title="@string/idiomaPref"
        android:icon="@drawable/ic_language"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="nochePref"
        android:title="@string/nocturnoPref"
        android:icon="@drawable/ic_brightness"/>

    <PreferenceCategory>

        <Preference
            android:key="btnCerrarPref"
            android:title="@string/cerrarSesion"
            android:icon="@drawable/ic_power" />


    </PreferenceCategory>
</PreferenceScreen>