<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".view.Login">

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="55dp"
        android:text="@string/usuario"
        android:textColor="?attr/textcolor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenLogin" />

    <TextView
        android:id="@+id/txtContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="27dp"
        android:text="@string/contrasena"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="?attr/textcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUser" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:textColor="?attr/textcolor"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasena" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="?attr/textcolor"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <TextView
        android:id="@+id/imagenLogin"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="MULTI-JUEGOS"
        android:textAlignment="center"
        android:textColor="?attr/textcolor"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNoRegistrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/noregistrado"
        android:textColor="?attr/linkcolor"
        android:textSize="15sp"
        android:onClick="abrirRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPass" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="188dp"
        android:layout_height="55dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="52dp"
        android:text="@string/iniciarSesion"
        android:onClick="comprobarDatos"
        android:background="?attr/buttoncolor"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoRegistrado" />
</androidx.constraintlayout.widget.ConstraintLayout>